# nn-algorithm

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
bench/: CMakeLists.txt  bench.cpp  bench_dist_times.cpp  bench_instance_generator.cpp  bench_others.py  bench_times.cpp  gen.py  options.h  options2.h
bench/b63/: CMakeLists.txt  README.md  nn.cpp  nn_golden.cpp
bench/data/: read_csv.py
src/: container.h  helper.h  indyk_motwani.h  list.h  nn.h  windowed_nn_v2.h
test/: CMakeLists.txt  bench.h  optimize_nn.cpp  test_binary_container.cpp  test_binary_container_cmp.cpp  test_nn.cpp  test_nn_golden.cpp
test/container/: container100.cpp  container128.cpp  container200.cpp  container256.cpp  container40.cpp  container64.cpp  tests.cpp
test/distribution/: CMakeLists.txt  dist_nn_golden_100.cpp  dist_nn_golden_128.cpp  dist_nn_golden_200.cpp  dist_nn_golden_250.cpp  dist_nn_golden_256.cpp  dist_nn_golden_40.cpp  dist_nn_golden_64.cpp
test/nn/: CMakeLists.txt  nn_golden_100.cpp  nn_golden_128.cpp  nn_golden_200.cpp  nn_golden_250.cpp  nn_golden_256.cpp  nn_golden_32.cpp  nn_golden_40.cpp  nn_golden_64.cpp
test/nn/all_delta/: CMakeLists.txt  nn_128.cpp  nn_256.cpp  nn_64.cpp
